tests/fail/intrinsics/unchecked_mul1.stderr
error: Undefined Behavior: overflow executing `unchecked_mul`
  --> $DIR/unchecked_mul1.rs:LL:CC
   |
LL |         std::intrinsics::unchecked_mul(300u16, 250u16);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ overflow executing `unchecked_mul`
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/unchecked_mul1.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

